# Aphelion

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp  vcpkg.json
ApCore/: CMakeLists.txt
ApCore/Core/: Network.cpp  Network.hpp  TeamManager.cpp  TeamManager.hpp
ApCore/Events/: AEvent.cpp  AEvent.hpp
ApCore/Events/Outfit/: OutfitEvent.cpp  OutfitEvent.hpp
ApCore/Events/POG/: PogEvent.cpp  PogEvent.hpp
ApCore/Modules/: RootCertificate.cpp  RootCertificate.hpp  Uri.hpp
ApCore/Nets/: CensusAPI.cpp  CensusAPI.hpp  WebSocket.cpp  WebSocket.hpp
ApCore/Planetside/: AFaction.hpp  EventManager.cpp  EventManager.hpp  Player.cpp  Player.hpp  Team.cpp  Team.hpp
ApData/: CMakeLists.txt
ApData/Sql/: Database.cpp  Database.hpp  DbSeed.cpp  DbSeed.hpp
ApData/Sql/Models/: AModel.hpp  Event.hpp  Faction.hpp  Item.hpp  ItemCategory.hpp  Loadout.hpp  Outfit.hpp  Player.hpp  Profile.hpp  Vehicle.hpp
ApData/Sql/Query/: PogQuery.cpp  PogQuery.hpp
ApGame/: CMakeLists.txt
ApGame/Contents/: ScoreContent.cpp  ScoreContent.hpp  SettingsContent.cpp  SettingsContent.hpp  WelcomeContent.cpp  WelcomeContent.hpp
ApGame/Core/: Application.cpp  Application.hpp  MenuContainer.cpp  MenuContainer.hpp
ApGame/Panels/Menus/: MainMenu.cpp  MainMenu.hpp  ScoreMenu.cpp  ScoreMenu.hpp
ApInclude/: boost.hpp  fast_atio.hpp  macros.h  pch.hpp  string_helper.hpp
ApTools/: CMakeLists.txt
ApTools/Event/: Event.hpp  Event.ipp
ApTools/Eventing/: Event.hpp  Event.ipp
ApUI/: CMakeLists.txt
ApUI/Core/: UIManager.cpp  UIManager.hpp
ApUI/ImGui/: imconfig.h  imgui_impl_dx11.cpp
ApUI/Modules/: Canvas.cpp  Canvas.hpp
ApUI/Panels/: APanel.cpp  APanel.hpp  PanelWindow.cpp  PanelWindow.hpp
ApUI/Plugins/: DataDispatcher.hpp  IDrawable.hpp  IPlugin.hpp  ITransformable.hpp  Pluginable.hpp  Styleable.hpp
ApUI/Types/: Color.cpp  Color.hpp
ApUI/Widgets/: AWidget.cpp  AWidget.hpp  DataWidget.hpp  WidgetContainer.cpp  WidgetContainer.hpp
ApUI/Widgets/Buttons/: AButton.hpp  Button.cpp  Button.hpp  ButtonColored.cpp  ButtonColored.hpp
ApUI/Widgets/Columns/: Column.cpp  Column.hpp
ApUI/Widgets/InputFields/: InputText.cpp  InputText.hpp
ApUI/Widgets/Layout/: Dummy.hpp  Group.cpp  Group.hpp  NewLine.hpp  SameLine.hpp  Separator.hpp
ApUI/Widgets/Sliders/: Slider.hpp  Slider.ipp
ApUI/Widgets/Tables/: Row.cpp  Row.hpp  Table.cpp  Table.hpp
ApUI/Widgets/Texts/: AText.hpp  Text.cpp  Text.hpp  TextColored.cpp  TextColored.hpp
ApUI/Widgets/Windows/: ChildWindow.cpp  ChildWindow.hpp
ApWindow/: CMakeLists.txt  RendererD3D.cpp  RendererD3D.hpp  Window.cpp  Window.hpp
ApWindow/Util/: cmonitorinfo_ex.cpp  cmonitorinfo_ex.hpp
Resources/: Aphelion.rc  resource.h
cmake/: CorePackages.cmake
